persistence.tf
//resource "aws_elasticache_cluster" "auth_cache" {
//
//  cluster_id = "auth-cache"
//  engine = "redis"
//  engine_version = "3.2.4"
//  node_type = "cache.t2.micro"
//  port = 6379
//  num_cache_nodes = 1
//  parameter_group_name = "default.redis3.2"
//
//  subnet_group_name = "${aws_elasticache_subnet_group.auth_cache.name}"
//  security_group_ids = ["${aws_security_group.persistence.id}"]
//}
//
//resource "aws_elasticache_subnet_group" "auth_cache" {
//  name = "auth_cache"
//  subnet_ids = ["${aws_subnet.persistence_2a.id}", "${aws_subnet.persistence_2b.id}"]
//}
//
//resource "aws_db_instance" "auth_db" {
//
//  name = "auth_db"
//  engine = "postgres"
//  engine_version = ""
//  instance_class = "db.t2.micro"
//  db_subnet_group_name = "${aws_db_subnet_group.auth_db.name}"
//
//  allocated_storage = 5
//
//  username = "wickedwitch"
//  password = "__OfTheWest"
//
//  skip_final_snapshot = true
//}
//
//resource "aws_db_subnet_group" "auth_db" {
//  name = "auth_db"
//  subnet_ids = ["${aws_subnet.persistence_2a.id}", "${aws_subnet.persistence_2b.id}"]
//}
